[gd_scene load_steps=36 format=3 uid="uid://xp4ne3lrwsmj"]

[ext_resource type="Script" path="res://scenes/player/Player.gd" id="1_bxbto"]
[ext_resource type="Texture2D" uid="uid://bad84x1d3mbav" path="res://assets/player.png" id="2_htple"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0m8g5"]
size = Vector3(0.547339, 0.543312, 0.1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixt8c"]
atlas = ExtResource("2_htple")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qat3g"]
atlas = ExtResource("2_htple")
region = Rect2(288, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcrcc"]
atlas = ExtResource("2_htple")
region = Rect2(320, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t826f"]
atlas = ExtResource("2_htple")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvt70"]
atlas = ExtResource("2_htple")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ioq0"]
atlas = ExtResource("2_htple")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1ttt"]
atlas = ExtResource("2_htple")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8mqu"]
atlas = ExtResource("2_htple")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klose"]
atlas = ExtResource("2_htple")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vom8t"]
atlas = ExtResource("2_htple")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsrow"]
atlas = ExtResource("2_htple")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_imx3n"]
atlas = ExtResource("2_htple")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ythxj"]
atlas = ExtResource("2_htple")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw5il"]
atlas = ExtResource("2_htple")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1mha"]
atlas = ExtResource("2_htple")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a53wn"]
atlas = ExtResource("2_htple")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh60g"]
atlas = ExtResource("2_htple")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbvjs"]
atlas = ExtResource("2_htple")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rcoo"]
atlas = ExtResource("2_htple")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nmf3"]
atlas = ExtResource("2_htple")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l215p"]
atlas = ExtResource("2_htple")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auknd"]
atlas = ExtResource("2_htple")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujnte"]
atlas = ExtResource("2_htple")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjkh0"]
atlas = ExtResource("2_htple")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eti7"]
atlas = ExtResource("2_htple")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd7y5"]
atlas = ExtResource("2_htple")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6abph"]
atlas = ExtResource("2_htple")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xdah"]
atlas = ExtResource("2_htple")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1o7p1"]
atlas = ExtResource("2_htple")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uivum"]
atlas = ExtResource("2_htple")
region = Rect2(320, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_idy70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixt8c")
}],
"loop": false,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qat3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcrcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t826f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvt70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ioq0")
}],
"loop": true,
"name": &"Hang",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1ttt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8mqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klose")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vom8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsrow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imx3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ythxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw5il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1mha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a53wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh60g")
}],
"loop": true,
"name": &"Idle",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbvjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rcoo")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nmf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l215p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auknd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujnte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjkh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eti7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd7y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6abph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xdah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1o7p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uivum")
}],
"loop": true,
"name": &"Run",
"speed": 16.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_4grfm"]
size = Vector3(0.605863, 0.566, 0.144669)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_bxbto")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00448918, -0.0209696, 0)
shape = SubResource("BoxShape3D_0m8g5")

[node name="Animation" type="AnimatedSprite3D" parent="."]
transform = Transform3D(2.039, 0, 0, 0, 2.25, 0, 0, 0, 2.25, 0, 0, 0)
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_idy70")
animation = &"Run"

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.877841, 0.478952, 0, -0.478952, 0.877841, 0, 1.19642, 2.43055)
current = true

[node name="RayCastLeft" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.201473, 0, -1, -8.80666e-09, 0, 0, 0, 1, -0.2, 0.126, 0)

[node name="RayCastRight" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.201473, 0, 1, -8.80668e-09, 0, 0, 0, 1, 0.2, 0.126, 0)

[node name="AreaDetectObjects" type="Area3D" parent="."]

[node name="Collision" type="CollisionShape3D" parent="AreaDetectObjects"]
shape = SubResource("BoxShape3D_4grfm")
